--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "node dist/src/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix src test",
@@ -12,7 +12,6 @@
   "keywords": [],
   "author": "kda",
   "license": "MIT",
-  "type": "commonjs",
   "dependencies": {
     "@stripe/stripe-js": "^3.0.7",
     "axios": "^1.4.0",
